# Inventory-Trend-Analysis-System

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Main.cpp  MainFrame.cpp  MainFrame.h  MainPage.cpp  MainPage.h  README.md  UpdateTimeData.h  desktop.ini  vcpkg.json
Debug/: Inventory Trend Analysis System.exe.recipe  Inventory Trend Analysis System.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/Inventor.6634e803.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Inventory Trend Analysis System.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Unit Tests/: Unit Tests.cpp
enc_temp_folder/661528aa31492e34eda4eb78e7387ed/: MainFrame.cpp
x64/Debug/: Inventory Trend Analysis System.exe.recipe  Inventory Trend Analysis System.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Debug/Inventor.6634e803.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Inventory Trend Analysis System.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: Inventory Trend Analysis System.exe.recipe  Inventory Trend Analysis System.iobj  Inventory Trend Analysis System.ipdb  Inventory Trend Analysis System.vcxproj.FileListAbsolute.txt
x64/Release/Inventor.6634e803.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Inventory Trend Analysis System.lastbuildstate  Inventory Trend Analysis System.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
